--- a/views/input.erb
+++ b/views/input.erb
@@ -1,9 +1,5 @@
-<h1>Enter the maze</h1>
+<h1>Enter the Vaughn</h1>
 
-<form action="/output" method="post">
-  <div class="form-group">
-    <label for="riddle1">What has a foot but no legs?</label>
-    <input id="riddle1" name="riddle1" class="form-control" type="text" autocomplete="off">
-  </div>
-  <button type="submit" class="btn">Go!</button>
-</form>
+<p>You wake up in a dimly lit room. You notice that you are laying down on a small operating table. You sit up and hear something metallic hit the floor. "What the--" you say. Your voice sounds different...it's like you're someone else. You slide off the table and reach down. It's a key. You take the key and, because you have no pockets, you put it in your mouth. It's coppery and warm. Tongue it's jagged grooves. What mysteries they must contain. How many people have touched this key, you wonder. The thought makes you gag a little, but there's no time for throwing up now. Look around. The room is empty except for two doors on the other side of the room - which will you choose? <p>
+  <br>
+  <a href="/room2">Door 1</a>  <a href="/room4">Door 2</a>
